updated styles layout and background

--- a/index.html
+++ b/index.html
@@ -3,9 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Zerdoza's Projects</title>
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
-    test
+    <main>
+        <div class="project-title">
+            <h1>Zerdoza's Project</h1>
+            <h3>HTML | CSS | Javascript</h3>
+        </div>
+
+        <div class="project-tile">
+            <div class="project-tile-image">
+                <img src="./styles/imgs/resultsSummary.png" alt="results summary example image">
+            </div>
+            <h2>Project Title</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tristique non dui sed fringilla. In malesuada sem eu dolor pellentesque porttitor. Cras non malesuada diam. Cras quam mi, ullamcorper eget nisl faucibus, dignissim malesuada nulla. Aenean commodo cursus mattis.</p>
+            <div class="date">
+                <p>28/11/2023</p>
+            </div>
+        </div>
+        <div class="project-tile">
+            <div class="project-tile-image">
+                <img src="./styles/imgs/resultsSummary.png" alt="results summary example image">
+            </div>
+            <h2>Project Title</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tristique non dui sed fringilla. In malesuada sem eu dolor pellentesque porttitor. Cras non malesuada diam. Cras quam mi, ullamcorper eget nisl faucibus, dignissim malesuada nulla. Aenean commodo cursus mattis.</p>
+            <div class="date">
+                <p>28/11/2023</p>
+            </div>
+        </div>
+        <div class="project-tile">
+            <div class="project-tile-image">
+                <img src="./styles/imgs/resultsSummary.png" alt="results summary example image">
+            </div>
+            <h2>Project Title</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tristique non dui sed fringilla. In malesuada sem eu dolor pellentesque porttitor. Cras non malesuada diam. Cras quam mi, ullamcorper eget nisl faucibus, dignissim malesuada nulla. Aenean commodo cursus mattis.</p>
+            <div class="date">
+                <p>28/11/2023</p>
+            </div>
+        </div>
+        <div class="background-img"></div>
+    </main>
 </body>
 </html>
