Updated first project and modifed background

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
 
         <div class="project-tile">
             <div class="project-tile-image">
+                <a href="./projects/Frontend-Mentor-Results-summary-component/index.html">
                 <img src="./styles/imgs/resultsSummary.png" alt="results summary example image">
+                </a>
             </div>
-            <h2>Project Title</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tristique non dui sed fringilla. In malesuada sem eu dolor pellentesque porttitor. Cras non malesuada diam. Cras quam mi, ullamcorper eget nisl faucibus, dignissim malesuada nulla. Aenean commodo cursus mattis.</p>
+            <h2><a href="./projects/Frontend-Mentor-Results-summary-component/index.html">Results summary component</a></h2>
+            <p>This project was pulled from Frontend Mentor page utilising HTML, CSS & Javascript. this compontent pulles data from a json file to import into the summary. utilising a responsive design suitable for mobile, tablet and webpage</p>
             <div class="date">
                 <p>28/11/2023</p>
             </div>
