--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
             <h1>Zerdoza's Project</h1>
             <h3>HTML | CSS | Javascript</h3>
         </div>
+        <div class="project-tile">
+            <div class="project-tile-image">
+                <a href="./projects/qr-code-component-main/index.html">
+                <img src="./projects/qr-code-component-main/design/mobile-design.jpg" alt="Qr component example image">
+                </a>
+            </div>
+            <h2><a href="./projects/qr-code-component-main/index.html">QR Component</a></h2>
+            <p>This project was pulled from Frontend Mentor page utilising HTML, CSS utilising a responsive design suitable for mobile, tablet and webpage</p>
+            <div class="date">
+                <p>03/12/2023</p>
+            </div>
+        </div>
 
         <div class="project-tile">
             <div class="project-tile-image">
@@ -25,25 +37,6 @@
                 <p>28/11/2023</p>
             </div>
         </div>
-        <div class="project-tile">
-            <div class="project-tile-image">
-                <img src="./styles/imgs/resultsSummary.png" alt="results summary example image">
-            </div>
-            <h2>Project Title</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tristique non dui sed fringilla. In malesuada sem eu dolor pellentesque porttitor. Cras non malesuada diam. Cras quam mi, ullamcorper eget nisl faucibus, dignissim malesuada nulla. Aenean commodo cursus mattis.</p>
-            <div class="date">
-                <p>28/11/2023</p>
-            </div>
-        </div>
-        <div class="project-tile">
-            <div class="project-tile-image">
-                <img src="./styles/imgs/resultsSummary.png" alt="results summary example image">
-            </div>
-            <h2>Project Title</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tristique non dui sed fringilla. In malesuada sem eu dolor pellentesque porttitor. Cras non malesuada diam. Cras quam mi, ullamcorper eget nisl faucibus, dignissim malesuada nulla. Aenean commodo cursus mattis.</p>
-            <div class="date">
-                <p>28/11/2023</p>
-            </div>
         </div>
         <div class="background-img"></div>
     </main>
