create new project product preview card

--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
         </div>
         <div class="project-tile">
             <div class="project-tile-image">
+                <a href="./projects/product-preview-card-component-main/index.html">
+                <img src="./projects/product-preview-card-component-main/design/mobile-design.jpg" alt="product preview card example image">
+                </a>
+            </div>
+            <h2><a href="./projects/product-preview-card-component-main/index.html">QR Component</a></h2>
+            <p>This project was pulled from Frontend Mentor page utilising HTML, CSS utilising a responsive design suitable for mobile, tablet and webpage</p>
+            <div class="date">
+                <p>03/12/2023</p>
+            </div>
+        </div>
+        <div class="project-tile">
+            <div class="project-tile-image">
                 <a href="./projects/qr-code-component-main/index.html">
                 <img src="./projects/qr-code-component-main/design/mobile-design.jpg" alt="Qr component example image">
                 </a>
